# haskell-programming-allen-moronuki

./: .gitignore  README.md
01-all-you-need-is-lambda/: 00-exercises.md  README.md
02-hello-haskell/: 00-scratch.hs  01-exercises.hs  02-learn.hs  03-function-with-where.hs  04-function-with-let.hs  README.md
03-strings/: 00-scratch.hs  01-exercises.lhs  03-print2.hs  04-print3.hs  05-topOrLocal.hs  06-print3fix.hs  07-rvrs.hs  README.md
04-basic-datatypes/: 00-scratch.hs  01-exercises.lhs  03-greetIfCool2.hs  README.md
05-types/: 00-scratch.hs  01-exercises.lhs  02-greetIfCool1.hs  03-typeInference1.hs  04-typeInference2.hs  05-sing.hs  06-arith3broken.hs  README.md
06-typeclasses/: 00-scratch.hs  01-exercises.lhs  README.md
07-more-functional-patterns/: 00-scratch.hs  01-exercises.lhs  02-matchingTuples1.hs  03-arith4.hs  README.md
08-recursion/: 00-scratch.hs  01-exercises.lhs  02-numwords.hs  README.md
09-lists/: 00-scratch.hs  01-exercises.lhs  02-poemLines.hs  03-cipher.hs  README.md
10-folds/: 00-scratch.hs  01-exercises.lhs  README.md
11-algebraic-datatypes/: 00-scratch.hs  01-exercises.lhs  02-cipher.hs  README.md
12-signaling-adversity/: 12.00-scratch.hs  12.05-exercises.hs  README.md
13-building-projects/: 13.00-scratch.hs  13.06-intermission.md  13.14-exercises.hs  README.md
13-building-projects/projects/hangman/: hangman.cabal
13-building-projects/projects/hangman/src/: Main.hs
13-building-projects/projects/hello/: hello.cabal
13-building-projects/projects/hello/exe/: Main.hs
13-building-projects/projects/hello/src/: DogsRule.hs  Hello.hs  Main.hs
14-testing/: 14.03-Intermission.md  README.md
14-testing/projects/exercises/: .gitignore  ChangeLog.md  exercises.cabal  package.yaml
14-testing/projects/exercises/app/: Main.hs
14-testing/projects/exercises/src/: Cipher.hs  UsingQC.hs  WordNumber.hs
14-testing/projects/exercises/test/: Spec.hs
14-testing/projects/hangman/: LICENSE  hangman.cabal
14-testing/projects/hangman/src/: Main.hs
14-testing/projects/hangman/test/: Spec.hs
14-testing/projects/morse/: .gitignore  ChangeLog.md  package.yaml
14-testing/projects/morse/app/: Main.hs
14-testing/projects/morse/src/: Morse.hs
14-testing/projects/morse/test/: Spec.hs
14-testing/projects/scratch/: Addition.hs  Arbitrary.hs  CoArbitrary.hs  Generators.hs  Intermission.hs  addition.cabal  scratch.cabal
15-monoid-semigroup/: README.md
15-monoid-semigroup/projects/p0-scratch/: README.md  p0-scratch.cabal
15-monoid-semigroup/projects/p0-scratch/src/: MadLib.hs  Main.hs
15-monoid-semigroup/projects/p1-list-orphan/: Listy.hs  ListyInstances.hs  README.md
15-monoid-semigroup/projects/p2-exercises/: LICENSE  README.md  p2-exercises.cabal
15-monoid-semigroup/projects/p2-exercises/src/: Main.hs
16-functor/: 16.7-exercises.hs  README.md  functors1.hs  functors2.hs
16-functor/exercises/: exercises.cabal  stack.yaml
16-functor/exercises/src/: ChapterExercises.hs  Main.hs
17-applicative/: 17.5-applicatives-in-use.hs  README.md
17-applicative/exercises/: exercises.cabal  stack.yaml
17-applicative/exercises/src/: Apl1.hs  BadMonoid.hs  Ex17_8A_ZipList.hs  Ex17_8B_List.hs  Ex17_8C_ZipList.hs  Ex17_8D_Validation.hs  Ex17_9A.hs  Main.hs
18-monad/: 18.2-bind.hs  18.4-either.hs  README.md
18-monad/exercises/: exercises.cabal
18-monad/exercises/src/: BadMonad.hs  Main.hs
19-applying-structure/: README.md
20-foldable/: Ex20_5.hs  Ex20_6.hs  README.md  scratch.hs
21-traversable/: Ex21_6_Morse.hs  README.md
21-traversable/exercises/: exercises.cabal  stack.yaml
21-traversable/exercises/src/: Ex21_12.hs  Ex21_8_Wreq.hs  Main.hs  SkiFree.hs  Tree.hs
22-reader/: Ex22_02.hs  Ex22_05.hs  Ex22_06.hs  Ex22_07.hs  Ex22_11.hs  Ex22_2.hs  Ex22_5.hs  Ex22_6.hs  Ex22_7.hs  README.md
23-state/: README.md
23-state/exercises/: exercises.cabal
23-state/exercises/src/: Ex23_5.hs  Ex23_6.hs  Ex23_7.hs  Ex23_8.hs  Main.hs
24-parser-combinators/: README.md
24-parser-combinators/exercises/: exercises.cabal  stack.yaml
24-parser-combinators/exercises/src/: Ex24_10.hs  Ex24_11.hs  Ex24_11_1.hs  Ex24_11_10.hs  Ex24_11_2.hs  Ex24_11_3.hs  Ex24_11_4.hs  Ex24_11_5.hs  Ex24_11_6to9.hs  Ex24_3.hs  Ex24_4.hs  Ex24_6.hs  Ex24_7.hs  LearnParsers.hs  Main.hs
25-composing-types/: Ex25_4.hs  Ex25_6.hs  README.md
26-monad-transformers/: BookEx.hs  Ex26_03.hs  Ex26_05.hs  Ex26_08.hs  Ex26_09.hs  Ex26_10.hs  Ex26_14.Hit.hs  Ex26_14.Morra.hs  Ex26_14.hs  Ex26_3.hs  Ex26_5.hs  Ex26_8.hs  Ex26_9.hs  README.md
26-monad-transformers/Example26_9/: Main.hs  stack.yaml  web-monadtrans.cabal
27-nonstrictness/: CoreDump.hs  Ex27_05.hs  Ex27_14.hs  Ex27_5.hs  README.md  Scratch.hs  StrictList.hs
28-basic-libraries/: README.md
28-basic-libraries/benching/: README.md  benching.cabal
28-basic-libraries/benching/src/: Main.hs
28-basic-libraries/exercises/: benching.cabal
28-basic-libraries/exercises/src/: BS.hs  Benching.hs  Ex28_06.hs  Ex28_08.hs  Ex28_10.hs  Ex28_10_DL.hs  Ex28_10_Q.hs  Ex28_6.hs  Ex28_8.hs  Main.hs  Seqs.hs
28-basic-libraries/profiling/: ProfilingHeap.hs  ProfilingHeap.ps  ProfilingTime.hs
29-io/: README.md
29-io/iniparse/: README.md  iniparse.cabal
29-io/iniparse/sample/: avaya.ini  ex1.ini  ex2.ini  python.ini
29-io/iniparse/src/: Ini.hs  Main.hs
29-io/vigenere/: README.md  encoded.txt  plain.txt  vigenere.cabal
29-io/vigenere/src/: Main.hs  Vigenere.hs
30-when-things-go-wrong/: Example_30_02_WhySomeException.hs  Example_30_03_Write.hs  Example_30_05.hs  Example_30_07.hs  README.md
31-final-project/: README.md
31-final-project/fingerd/: finger.db  fingerd.cabal
31-final-project/fingerd/src/: Debug.hs  InsertUser.hs  Main.hs  User.hs
