name:                iniparse
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/glebec/iniparse#readme
license:             BSD3
license-file:        LICENSE
author:              Gabriel Lebec
maintainer:          glebec@gmail.com
copyright:           2019 Gabriel Lebec
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable iniparse
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Ini
  build-depends:       base >= 4.7 && < 5
                     , trifecta
                     , parsers
                     , containers
                     , text
                     , raw-strings-qq
