name:          scratch
version:       0.1.0.0
license-file:  LICENSE
author:        Gabriel Lebec
maintainer:    glebec@gmail.com
category:      Text
build-type:    Simple
cabal-version: >=1.10

library
  exposed-modules:    Addition
                    , Intermission
                    , Generators
                    , Arbitrary
                    , CoArbitrary
  hs-source-dirs:     .
  ghc-options:        -Wall -fwarn-tabs
  default-language:   Haskell2010
  build-depends:      base >=4.7 && <5
                    , hspec
                    , QuickCheck
