name:                p0-scratch
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/glebec/p0-scratch#readme
license:             BSD3
license-file:        LICENSE
author:              Gabriel Lebec
maintainer:          glebec@gmail.com
copyright:           2018 Gabriel Lebec
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable p0-scratch
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , hspec
  other-modules:       MadLib
